# AMS-API

./: config.py  functions.py  main.py  pyproject.toml  replit.nix  requirements.txt  sql_functions.py  vercel.json  voiceflow_functions.py
alembic/: env.py
alembic/versions/: 046b456f5b3f_removed_transcripts_table_and_user_.py  04c4443b2eff_addd_ondelete_cascade_to_sessionid_in_.py  06563ff5e4f0_add_assistant_file_relationship_to_.py  086df6b2273a_user_add_email_column_and_make_password_.py  088abe0353be_trnascripts_and_chat_sessions_cascade_.py  0eb9a76b158d_add_cascade_delete_on_documents_and_.py  1b88af689c63_add_event_listeners_for_timestamps.py  1b9e87655bed_add_name_column_to_agent_table.py  e234b2246dfc_init.py  (+26 more)
database/: database.py  models.py  utils.py
docs/: 01 manual predstaveni sluzby.docx  02 manual programy.docx  03_manual SA audit.docx  Namitkovnik - domlouvani analyzy.docx  telefonat na doporuceni.docx
openai/: assistants.py
routes/: agent_routes.py  auth_routes.py  document_routes.py  history_routes.py  knowledge_routes.py  module_routes.py  openai_routes.py  project_routes.py  routes.py  transcript_routes.py  users_routes-old.py  users_routes.py  utility_routes.py  voiceflow_routes.py
services/: airtable_service.py  auth_service.py  document_service.py  openai_service.py  session_service.py  sql_service.py  storage_service.py  voiceflow_service.py
source/: conf.py  database.rst  functions.rst  index.rst  routes.rst  services.rst
util_functions/: agent_functions.py  functions.py  oai_functions.py  sql_functions.py  storage_functions.py
(+3 files in other folders)
