[tool.poetry]
name = "python-template"
version = "1.0.0"
description = "API for Assistant Management System"
authors = ["Dzamal (https://github.com/Dzamal6)"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
flask = "^3.0.0"
redis = "^5.0.1"
requests = "^2.31.0"
flask-cors = "^4.0.0"
airtable = "^0.4.8"
itsdangerous = "^2.1.2"
functions = "^0.7.0"
cryptography = "^41.0.7"
pytz = "^2023.3.post1"
pyairtable = "^2.2.2"
utils = "^1.0.2"
routes = "^2.5.1"
bcrypt = "^4.1.2"
flask-limiter = "^3.5.1"
sqlalchemy = "^2.0.27"
openai = "^1.13.3"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"